fix(STB3-193): open reflection for java.time